--- a/map/m81413.html
+++ b/map/m81413.html
@@ -67,8 +67,16 @@
 
 </map>
 <tr>
-
+  
+  
  
+
+
+<p style="text-align: center;"><span style="font-size: small;"><strong><strong>
+ 
+  <p><a href="https://www.facebook.com/audiovisualarchivetimorleste/app_201742856511228?ref=page_internal" target="_parent"><b>[Facebook Knowledge Sharing Page]</b></a></p>
+
+  
 
 </center>
 </body>
