--- a/att/district_caps_ll_dbf0.html
+++ b/att/district_caps_ll_dbf0.html
@@ -32,7 +32,7 @@
 
           
           
-<div class="fb-send" data-href="https://drive.google.com/open?id=1XCauBphnfz83ZstnVlqfcqlu8dU"></div>
+<div class="fb-send" data-href="https://drive.google.com/open?id=1XCauBphnfz83ZstnVlqfcqlu8dU&usp=sharing"></div>
 
 
       </font>
