--- a/att/district_caps_ll_dbf11.html
+++ b/att/district_caps_ll_dbf11.html
@@ -28,7 +28,7 @@
 
 
 
-<div class="fb-send" data-href="http://bit.ly/2hV56vz"></div>
+<div class="fb-send" data-href="https://timorleste.github.io/bobonaro/"></div>
 
 
 
