--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -27,7 +27,7 @@
     <td bgcolor="#F7E1C0">
       <font face="Arial, Helvetica, sans-serif" size="-1">
 
-<div class="fb-send" data-href="http://bit.ly/2iaNbR6"></div>
+<div class="fb-send" data-href="https://www.google.com/maps/d/viewer?mid=1VXeAz7t1MSj30LFc0m32W3sG0MA&ll=-8.555278700000018%2C125.57731880000006&z=15"></div>
 
 
 
