--- a/att/district_caps_ll_dbf0.html
+++ b/att/district_caps_ll_dbf0.html
@@ -23,7 +23,7 @@
   <tr>
     <td bgcolor="#FED191">
       <font face="Arial, Helvetica, sans-serif"  size="-1">
-      Area
+      Suco Boundaries
       </font>
     </td>
     <td bgcolor="#F7E1C0">
@@ -33,7 +33,7 @@
           
           
 <div class="fb-send" data-href="https://timorleste.github.io/manufahi"></div>
-TEST
+
 
       </font>
     </td>
