--- a/att/district_caps_ll_dbf2.html
+++ b/att/district_caps_ll_dbf2.html
@@ -21,7 +21,7 @@
   <tr>
     <td bgcolor="#FED191">
       <font face="Arial, Helvetica, sans-serif"  size="-1">
-      Area
+      Suco_Map
       </font>
     </td>
     <td bgcolor="#F7E1C0">
