--- a/leg/legend.html
+++ b/leg/legend.html
@@ -3,7 +3,7 @@
 
 <META NAME="robots" content="index">
 <META NAME="robots" content="follow">
-<title>Legend of School</title>
+<title>School Distribution</title>
 </head>
 <body>
 <table>
