--- a/att/district_caps_ll_dbf9.html
+++ b/att/district_caps_ll_dbf9.html
@@ -28,9 +28,7 @@
     <td bgcolor="#F7E1C0">
       <font face="Arial, Helvetica, sans-serif" size="-1">
 
-
-<div class="fb-send" data-href="https://timorleste.github.io/covalima/"></div>
-
+<div class="fb-send" data-href="https://timorleste.github.io/covalima"></div>
 
       </font>
     </td>
