--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -26,8 +26,8 @@
     </td>
     <td bgcolor="#F7E1C0">
       <font face="Arial, Helvetica, sans-serif" size="-1">
-https://timorleste.github.io/dili
 
+	      click here</a>&nbsp;|&nbsp;<a href="https://timorleste.github.io/dili/" target="_blank">
 
 
       </font>
