--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -27,9 +27,11 @@
     <td bgcolor="#F7E1C0">
       <font face="Arial, Helvetica, sans-serif" size="-1">
 
-	      click here</a>&nbsp;|&nbsp;<a href="https://timorleste.github.io/dili/" target="_blank">
+	     
+	      <p><a href="https://timorleste.github.io/dili/" target="_blank">
+	      <p><a href="">Click here</a></p>
 
-
+	     
       </font>
     </td>
   </tr>
