--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -35,7 +35,7 @@
 <button onclick="myFunction()">Click here</button>
 <script>
 function myFunction() {
-  window.open("https://timorleste.github.io/dili/", "_parent", "toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=0,width=300,height=300");
+  window.open("https://timorleste.github.io/dili/", "_top", "toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=0,width=300,height=300");
 }
 </script>		      
 		      
