--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -36,7 +36,7 @@
 <button onclick="myFunction()">Click here</button>
 <script>
 function myFunction() {
-  window.open("https://timorleste.github.io/dili/", "_self", "toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=0,width=300,height=50");
+  window.open("https://timorleste.github.io/dili/", "_self", "toolbar=yes,scrollbars=yes,resizable=yes");
 }
 </script>		      
 		      
