--- a/att/district_caps_ll_dbf8.html
+++ b/att/district_caps_ll_dbf8.html
@@ -27,7 +27,15 @@
       <font face="Arial, Helvetica, sans-serif" size="-1">
 
 
-<div class="fb-send" data-href="https://timorleste.github.io/oecusse/"></div>
+
+<button onclick="myFunction()">Click here</button>
+<script>
+function myFunction() {
+  window.open("https://timorleste.github.io/dili/", "_self");
+}
+</script>		      
+		      
+	      
 
 
 
