--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -58,7 +58,7 @@ function myFunction() {
     </td>
     <td bgcolor="#F7E1C0">
       <font face="Arial, Helvetica, sans-serif" size="-1">
-      Dili
+      Dili📮
       </font>
     </td>
 
