--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -67,7 +67,7 @@ function myFunction() {
 <tr>
     <td bgcolor="#FED191">
       <font face="Arial, Courier, mono"  size="-1">
-      Audio_Visual📺
+      Audiovisual📺
       </font>
     </td>
     <td bgcolor="#F7E1C0">
