--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -33,7 +33,7 @@
 	
 
       
-<button onclick="myFunction()">Click here📌</button>
+<button onclick="myFunction()">Click here 🗺📌</button>
 <script>
 function myFunction() {
   window.open("https://timorleste.github.io/dili/", "_self");
@@ -58,7 +58,7 @@ function myFunction() {
     </td>
     <td bgcolor="#F7E1C0">
       <font face="Arial, Helvetica, sans-serif" size="-1">
-      Dili📮
+      Dili
       </font>
     </td>
 
@@ -67,7 +67,7 @@ function myFunction() {
 <tr>
     <td bgcolor="#FED191">
       <font face="Arial, Courier, mono"  size="-1">
-      Audiovisual📺
+      Audio_Visual
       </font>
     </td>
     <td bgcolor="#F7E1C0">
