--- a/imapatt.html
+++ b/imapatt.html
@@ -17,6 +17,19 @@
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
 <p>🌀Click on the map on the left to receive more information<br>about objects on the map</p>
+
+    
+<body bgcolor="#FFFFFF">
+<font face="Arial, Helvetica, sans-serif" size="-1">
+    
+<p>1.STAY home as much as you can<br>
+<p>2.KEEP a safe distance<br>
+<p>3.WASH hands often<br>
+<p>4.COVER your cough<br>
+<p>5.SICK? Call ahead 119<br>
+
+
+
 </font>
 </body>
 
