--- a/imapatt.html
+++ b/imapatt.html
@@ -21,7 +21,7 @@
     
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
-    
+General public health information:    
 <p>1. STAY home as much as you can<br>
 <p>2. KEEP a safe distance<br>
 <p>3. WASH hands often<br>
