--- a/imapatt.html
+++ b/imapatt.html
@@ -26,7 +26,7 @@
 <p>2. KEEP a safe distance<br>
 <p>3. WASH hands often<br>
 <p>4. COVER your cough<br>
-<p>5. SICK? Call ahead 119<br>
+<p>5. SICK? Call ahead hotline 119<br>
 
 <p> <br>
 
