--- a/imapatt.html
+++ b/imapatt.html
@@ -21,12 +21,11 @@
     
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
-<p>General public health information:<br>   
-<p>1. STAY home as much as you can<br>
-<p>2. KEEP a safe distance<br>
-<p>3. WASH hands often<br>
-<p>4. COVER your cough<br>
-<p>5. SICK? Call ahead hotline 119<br>
+<p>Hamenus risku ba infesaun coronavirus:<br>   
+<p>1. Fase liman bebeik uza sabaun ne bee ka desinfetante alkol.<br>
+<p>2. Taka ibun no inus ho liman sikun ka uza tixu wainhira me'ar no fani - soe keda tixu ba lixeira no fase liman.<br>
+<p>3. Evita halo kontaktu besik ho ema ne'ebe maka me'ar no isin manas.<br>
+<p>4. Kontaktu ba no telp 119 hodi hetan asistenti mediku<br>
 
 <p> <br>
 
