--- a/imapatt.html
+++ b/imapatt.html
@@ -23,9 +23,10 @@
 <font face="Arial, Helvetica, sans-serif" size="-1">
 <p>Hamenus risku ba infesaun coronavirus:<br>   
 <p>1. Fase liman bebeik uza sabaun ne bee ka desinfetante alkol.<br>
-<p>2. Taka ibun no inus ho liman sikun ka uza tixu wainhira me'ar no fani - soe keda tixu ba lixeira no fase liman.<br>
-<p>3. Evita halo kontaktu besik ho ema ne'ebe maka me'ar no isin manas.<br>
-<p>4. Kontaktu ba no telp 119 hodi hetan asistenti mediku<br>
+<p>2. Taka ibun no inus ho liman sikun ka uza tixu wainhira me'ar no fani,<br>
+<p>3. Soe kedas tixu ba lixeira no fase liman.<br>
+<p>4. Evita halo kontaktu besik ho ema ne'ebe maka me'ar no isin manas.<br>
+<p>5. Kontaktu ba no telp 119 hodi hetan asistenti mediku.<br>
 
 <p> <br>
 
