--- a/imapatt.html
+++ b/imapatt.html
@@ -16,8 +16,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
-<p>🌀Click on the map on the left to receive more information about objects on the map.</p>
-
+<p>🌀Klik iha mapa hodi hetan no hare informasaun audio-visual. </p>
     
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
