--- a/imapatt.html
+++ b/imapatt.html
@@ -16,7 +16,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
-<p>🌀Klik iha mapa hodi hetan no hare informasaun audio-visual. </p>
+<p>🌀Klik iha fatin diresaun mapa hodi hetan no hare informasaun audio-visual. </p>
     
 <body bgcolor="#FFFFFF">
 <font face="Arial, Helvetica, sans-serif" size="-1">
