--- a/att/district_caps_ll_dbf4.html
+++ b/att/district_caps_ll_dbf4.html
@@ -33,7 +33,7 @@
 	
 
       
-<button onclick="myFunction()">Click here 🗺📌</button>
+<button onclick="myFunction()">Klik-Loke mapa lokalisasaun 🗺📌</button>
 <script>
 function myFunction() {
   window.open("https://timorleste.github.io/dili/", "_self");
