--- a/att/district_caps_ll_dbf7.html
+++ b/att/district_caps_ll_dbf7.html
@@ -27,7 +27,7 @@
       <font face="Arial, Helvetica, sans-serif" size="-1">
 
 
-<button onclick="myFunction()">Click here</button>
+<button onclick="myFunction()">Klik-Loke mapa lokalisasaun 🗺📌</button>
 <script>
 function myFunction() {
   window.open("https://timorleste.github.io/dili/", "_self");
