--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 
-<meta name="author" content="timorleste@live.com | Copyright © T-2000 | Audiovisual Mapping and Archive Development in Timor Leste">
+<meta name="author" content="timorleste@live.com | Copyright © Tony Behar | Audiovisual Mapping and Archive Development in Timor Leste">
 
 
 <META NAME="robots" content="index">
